--- a/wxDoctor/pages/drpatient/drpatient.wxml
+++ b/wxDoctor/pages/drpatient/drpatient.wxml
@@ -27,7 +27,7 @@
         </view>
         <view class="info-text info-text2">
           <text class="pay-sign" wx:if="{{item.status==1}}">已付费</text>
-          <text class="pay-sign end-sign" wx:if="{{item.status==2}}">已结束</text>
+          <text class="pay-sign end-sign" wx:if="{{item.status==2||item.status==4}}">已结束</text>
           <text class="pay-sign refund-btn" wx:if="{{item.status==3}}">退款中</text>
           <text class="info-text-time">{{item.ctime}}</text>
         </view>
