--- a/wxDoctor/app.wxss
+++ b/wxDoctor/app.wxss
@@ -189,3 +189,12 @@ button::after {
   font-size: 28rpx;
   color: #919191;
 }
+button[disabled][type="default"], button[disabled]:not([type]) {
+  background-color: #c8c8c8;
+  color: #fff;
+}
+.viewf1 {
+  width: 100%;
+  height: 100%;
+  background-color: #f1f1f1;
+}
