--- a/wxDoctor/pages/wallet/wallet.wxml
+++ b/wxDoctor/pages/wallet/wallet.wxml
@@ -1,46 +1,64 @@
-<view class="container wallet">
-  <view class="list-inner">
-    <text class="list-inner-tit">钱包余额：</text>
-    <view class="list-inner-r">
-      <text class="list-inner-money">{{info.balance ? info.balance /100 : 0}}</text>
-      <text class="list-inner-unit">元</text>
+<view class="container">
+  <scroll-view scroll-y class="wallet">
+    <view class="wallet-info">
+      <view class="list-inner">
+        <text class="list-inner-tit">钱包余额：</text>
+        <view class="list-inner-r">
+          <text class="list-inner-money">{{info.balance ? info.balance /100 : 0}}</text>
+          <text class="list-inner-unit">元</text>
+        </view>
+      </view>
+      <view class="list-inner">
+        <text class="list-inner-tit">历史总收入：</text>
+        <view class="list-inner-r">
+          <text class="list-inner-money">{{info.total ? info.total/100 :0}}</text>
+          <text class="list-inner-unit">元</text>
+        </view>
+      </view>
+      <view class="list-inner">
+        <text class="list-inner-tit">提现中：</text>
+        <view class="list-inner-r">
+          <text class="list-inner-money">{{info.draw? info.draw/100 : 0}}</text>
+          <text class="list-inner-unit">元</text>
+        </view>
+      </view>
+      <view class="list-inner">
+        <text class="list-inner-tit">历史提现金额：</text>
+        <view class="list-inner-r">
+          <text class="list-inner-money">{{info.totaldraw ? info.totaldraw/100: 0}}</text>
+          <text class="list-inner-unit">元</text>
+        </view>
+      </view>
     </view>
-  </view>
-  <view class="list-inner">
-    <text class="list-inner-tit">历史总收入：</text>
-    <view class="list-inner-r">
-      <text class="list-inner-money">{{info.total ? info.total/100 :0}}</text>
-      <text class="list-inner-unit">元</text>
+    <view class="wallet-info">
+      <view class="list-inner list-ipt">
+        <text class="list-inner-tit">金额：</text>
+        <input class="g-tac wallet-ipt" placeholder-class="wallet-ipt-plhd" placeholder="请输入提现金额"
+        value="{{money}}"
+        bindinput="makeDraw"
+        bindblur="checkDraw"
+        focus="{{feeFocus}}"/>
+      </view>
+      <view class="list-inner list-ipt">
+        <text class="list-inner-tit">提现密码：</text>
+        <input class="g-tac wallet-ipt" placeholder-class="wallet-ipt-plhd" placeholder="请输入提现密码"
+        type="password"
+        maxlength="6"
+        value="{{psd}}"
+        focus="{{codeFocus}}"
+        bindinput="makeBtnstatus"/>
+      </view>
     </view>
-  </view>
-  <view class="list-inner">
-    <text class="list-inner-tit">提现中：</text>
-    <view class="list-inner-r">
-      <text class="list-inner-money">{{info.draw? info.draw/100 : 0}}</text>
-      <text class="list-inner-unit">元</text>
+    <button disabled="{{btnDisable&&info.balance<info.mindraw}}" class="btn wallet-btn" style="background-color: {{btnBg}}" bindtouchstart="changeBg" bindtouchend="checkCode" >提现</button>
+    <view class="forget-code">
+      <text class="forget-text" bindtap="fotgetpsd">忘记密码？</text>
     </view>
+    <view class="widthdraw-tip">
+    <view class="colfb">提现须知：</view>
+    <view>支持金额：最低提现金额为<text class="col1c">50元</text></view>
+    <view>提现流程：提现申请后将提交后台人工审核。工作日提现将在当日<text class="col1c">18:00</text>前转出；周末及法定节假日申请的提现将在下一个工作日<text class="col1c">18:00</text>前转出。</view>
+    <view>如体现过程遇到疑问，请联系人工客服：21660569</view>
   </view>
-  <view class="list-inner">
-    <text class="list-inner-tit">历史提现金额：</text>
-    <view class="list-inner-r">
-      <text class="list-inner-money">{{info.totaldraw ? info.totaldraw/100: 0}}</text>
-      <text class="list-inner-unit">元</text>
-    </view>
-  </view>
-  <input class="g-tac wallet-ipt" placeholder-class="wallet-ipt-plhd" placeholder="请输入提现金额"
-    value="{{money}}"
-    bindinput="makeDraw"
-    focus="{{feeFocus}}"/>
-  <input class="g-tac wallet-ipt code-ipt" placeholder-class="wallet-ipt-plhd" placeholder="请输入提现密码"
-    type="password"
-    maxlength="6"
-    value="{{psd}}"
-    focus="{{codeFocus}}"
-    bindinput="makeBtnstatus"/>
-  <button disabled="{{btnDisable&&info.balance<info.mindraw}}" class="btn" style="background-color: {{btnBg}}" bindtouchstart="changeBg" bindtouchend="checkCode" >提现</button>
-  <view class="forget-code">
-    <text class="forget-text" bindtap="fotgetpsd">忘记密码？</text>
-  </view>
-  <text class="mindraw-tip g-tac">最低提现金额为50元\n申请提现后会有工作人员联系您</text>
+  </scroll-view>
   <text class="tip-show" wx:if="{{tipShow}}">{{tipMsg}}</text>
 </view>
