--- a/wxDoctor/pages/wallet/wallet.wxss
+++ b/wxDoctor/pages/wallet/wallet.wxss
@@ -1,7 +1,16 @@
 .wallet {
   width: 100%;
-  height: 100%;
+  height: auto;
   padding-bottom: 40rpx;
+  background-color: #f1f1f1;
+}
+.wallet-info {
+  width: 100%;
+  height: auto;
+  margin-top: 20rpx;
+  background-color: #fff;
+  border-top: 2rpx solid #dcdcdc;
+  border-bottom: 2rpx solid #dcdcdc;
 }
 .list-inner {
   width: 92%;
@@ -12,6 +21,15 @@
   justify-content: space-between;
   align-items: center;
   border-bottom: 1rpx solid #dcdcdc;
+}
+.list-inner:last-child {
+  border-bottom: 0;
+}
+.list-ipt {
+  justify-content: flex-start;
+}
+.list-ipt text {
+  width: 164rpx;
 }
 .list-inner-tit{
   font-size: 32rpx;
@@ -37,10 +55,7 @@
   width: 270rpx;
   height: 50rpx;
   line-height: 60rpx;
-  margin-top: 97rpx;
-  /**padding: 10rpx 0;**/
   font-size: 36rpx;
-  border-bottom: 1rpx solid #bebebe;
 }
 .code-ipt {
   margin-top: 50rpx;
@@ -55,10 +70,31 @@
   line-height: 150%;
 }
 .forget-code {
-  width: 65%;
+  width: 90%;
   height: auto;
   margin: 26rpx auto 40rpx;
   color: #1ed2af;
   font-size: 26rpx;
   text-align: right;
+}
+.widthdraw-tip {
+  width: 100%;
+  height: auto;
+  padding: 0 5%;
+  margin-top: 24rpx;
+}
+.widthdraw-tip view {
+  display: block;
+  font-size: 28rpx;
+  color: #797979;
+  line-height: 150%;
+}
+.widthdraw-tip .colfb {
+  color: #2b76fb;
+}
+.widthdraw-tip .col1c {
+  color: #f1961c;
+}
+.wallet-btn {
+  width: 90%;
 }
