--- a/vue2x/wxlogin/src/css/index.css
+++ b/vue2x/wxlogin/src/css/index.css
@@ -9,9 +9,9 @@ http://yuilibrary.com/license/
    \0 兼容IE 8 9 10
 */
 
-@charset "utf-8";
+/* @charset "utf-8"; */
 
-html{
+html {
   color:#000;
   background:#f7f7f7;
   font-size: 100px;
@@ -85,7 +85,7 @@ sub{
   vertical-align:text-bottom;
 }
 
-a,i,em{
+a,i,em {
   font-style: normal;
   text-decoration: none;
 }
@@ -301,9 +301,11 @@ video {
     position: relative
 }
 .wx-btn {
-  margin-top: 1.6rem;
+  width: 76%;
+  line-height: 0.9rem;
   background-color: #42bd40;
   position: relative;
+  margin:  0 auto;
 }
 .btn-img-wechat {
   width: 0.44rem;
@@ -563,10 +565,68 @@ video {
   color: #fff;
 }
 
+/**轮播**/
+.slide{
+  width: 100%;
+  height: auto;
+  position: relative;
+  max-width: 7.5rem;
+  overflow: hidden;
+  margin-bottom: 0.16rem;
+}
+.slide:after{
+  content: '';
+  display: block;
+  width: 100%;
+  padding-top: 50%;
+}
+.slide ul{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: auto;
+}
+.slide li{
+  list-style: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: auto;
+}
+.slide a {
+  display: block;
+  width: 100%;
+  height: auto
+}
+/* 解决js阻塞页面显示首屏 */
+.slide li:first-child{
+  z-index: 1;
+}
+.slide li img{
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: auto;
+  border: none;
+}
 
-
-
-
-
-
-
+.oneclick-bottom {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  padding: 0.5rem 0 0.44rem;
+  width: 100%;
+  height: 2.4rem;
+  background-color: #fff;
+}
+.oneclick-bottom-text {
+  display: block;
+  text-align: center;
+  font-size: 0.26rem;
+  color: #969696;
+  margin-top: 0.3rem;
+}
