--- a/vue2x/wxlogin/src/css/index.css
+++ b/vue2x/wxlogin/src/css/index.css
@@ -622,6 +622,7 @@ video {
   width: 100%;
   height: 2.4rem;
   background-color: #fff;
+  z-index: 10;
 }
 .oneclick-bottom-text {
   display: block;
