--- a/vue2x/wxlogin/src/css/index.css
+++ b/vue2x/wxlogin/src/css/index.css
@@ -568,7 +568,7 @@ video {
 /**轮播**/
 .slide{
   width: 100%;
-  height: auto;
+  height: 2.3rem;
   position: relative;
   max-width: 7.5rem;
   overflow: hidden;
@@ -630,4 +630,14 @@ video {
   font-size: 0.26rem;
   color: #969696;
   margin-top: 0.3rem;
+}
+.login-view {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top:  0;
+  left: 0;
+}
+.min5-view {
+  display: none;
 }
