--- a/dgfree/css/map.css
+++ b/dgfree/css/map.css
@@ -12,10 +12,11 @@
 }
 .map-enlarge {
   position: absolute;
-  right: 0;
-  bottom: 0;
+  left: 50%;
+  bottom: 60px;
   width: 46px;
   height: 46px;
+  margin-left: 395px;
   background-color: #f6f6f6;
   border: 1px solid #b5b5b5;
 }
@@ -34,4 +35,21 @@
 }
 .map-enlarge:hover .enlarge-icon-hover{
   display: block;
+}
+.bigmap {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.bigmap #allmap {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top:0;
+  left:0;
+}
+.bigmap #enlarge {
+  position: fixed;
+  top:0;
+  right: 0;
 }
