--- a/dgfree/css/reset.css
+++ b/dgfree/css/reset.css
@@ -152,13 +152,15 @@ a {text-decoration: none;}
 }
 .nav-logo {
   display: block;
+  width: 228px;
+  height: auto
   margin-bottom: 17px;
 }
 .nav-list {
   border-bottom: 3px solid #4b8eff;
 }
 .nav-list-item {
-  width: 200px;
+  width: 64px;
   height:  50px;
   background-color: #f5f5f5;
 }
