--- a/app/css/reset.css
+++ b/app/css/reset.css
@@ -12,14 +12,16 @@ html{
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,a{
   margin:0;
   padding:0;
-  font-family: "Arial","Microsoft YaHei","微软雅黑","宋体";
+  font-family: Arial,Helvetica,sans-serif;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 *{
   margin:0;
   padding:0;
-  font-family: "Arial","Microsoft YaHei","微软雅黑","宋体";
+  font-family: Arial,Helvetica,sans-serif;
   box-sizing:border-box;
   -webkit-box-sizing:border-box;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 table{
   border-collapse:collapse;
