--- a/dgfree/css/reset.css
+++ b/dgfree/css/reset.css
@@ -177,7 +177,7 @@ a {text-decoration: none;}
   border-bottom: 3px solid #4b8eff;
 }
 .nav-list-cur a {
-  color: #262626;
+  color: #4b8eff;
 }
 .nav-list-item .coleff {
   color: #4b8eff;
