--- a/vue2x/wxlogin/src/css/index.css
+++ b/vue2x/wxlogin/src/css/index.css
@@ -148,7 +148,9 @@ video {
 .login {
   width: 100%;
   height: 100%;
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .login-top-bg {
   width: 100%;
@@ -638,13 +640,14 @@ video {
 .login-view {
   width: 100%;
   height: auto;
-  position: absolute;
+  /* position: absolute;
   top:  0;
-  left: 0;
-  padding-bottom: 2.6rem;
+  left: 0; */
+  
 }
 .min5-view {
   display: none;
+  padding-bottom: 2.6rem;
 }
 /* .wx-disable {
   background-color: #88d887;
