--- a/vue2x/wxlogin/src/css/index.css
+++ b/vue2x/wxlogin/src/css/index.css
@@ -151,6 +151,11 @@ video {
   position: absolute;
   top: 0;
   left: 0;
+  transition: top 2s;
+  -webkit-transition: top 2s;
+  -ms-transition: top 2s;
+  -o-transition: top 2s;
+  -moz-transition: top 2s;
 }
 .login-top-bg {
   width: 100%;
