--- a/liveoss/src/views/home/home.less
+++ b/liveoss/src/views/home/home.less
@@ -1,46 +1,26 @@
-.user-infor{
-    height: 120px;
+.home-fixed-top {
+  padding: 10px;
+  background-image:-webkit-linear-gradient(-90deg, #86c55c, #1fc2ca); 
+  background-image:linear-gradient(-90deg,#86c55c,#1fc2ca);
 }
-.avator-img{
+.home-text {
+  font-size: 14px;
+  color: #fff;
+  p {
+    font-size: 18px;
+    font-weight: 800;
+  }
+}
+/*.home-text-tit {
+  font-size: 18px;
+  font-weight: 800;
+}
+.home-logo {
+  width: 62px;
+  height: 62px;
+  img {
     display: block;
-    width: 80%;
-    max-width: 100px;
-    height: auto;
-}
-.card-user-infor-name{
-    font-size: 2em;
-    color: #2d8cf0;
-}
-.card-title{
-    color: #abafbd;
-}
-.made-child-con-middle{
+    width: 100%;
     height: 100%;
-}
-.to-do-list-con{
-    height: 160px;
-    overflow: auto;
-}
-.to-do-item{
-    padding: 2px;
-}
-.infor-card-con{
-    height: 100px;
-}
-.infor-card-icon-con{
-    height: 100%;
-    color: white;
-    border-radius: 3px 0 0 3px;
-}
-.map-con{
-    height: 305px;
-}
-.map-incon{
-    height: 100%;
-}
-.data-source-row{
-    height: 200px;
-}
-.line-chart-con{
-    height: 150px;
-}
+  }
+}*/
